--- a/TheSpectaclesGit/src/css/style.css
+++ b/TheSpectaclesGit/src/css/style.css
@@ -76,7 +76,7 @@ iframe {
 a, a:focus, a:hover {
   text-decoration: none;
   outline: 0;
-  color: #000;
+  color: #ffe5b4;
 }
 
 blockquote {
@@ -101,8 +101,8 @@ input[type="email"], input[type="password"], input[type="text"], input[type="tel
 }
 
 input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focus, input[type="tel"]:focus {
-  box-shadow: none;
-  border: 1px solid #000;
+  box-shadow: none; 
+  border: 30px solid #111;
 }
 
 .form-control {
@@ -112,7 +112,7 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
 
 .form-control:focus {
   box-shadow: none;
-  border: 1px solid #000;
+  border: 1px solid #4caf50;
 }
 
 .btn-main, .btn-solid-border, .btn-transparent, .btn-small {
@@ -462,7 +462,7 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
 }
 
 .dropdown-slide .open > a, .dropdown-slide .open > a:focus, .dropdown-slide .open > a:hover {
-  background: transparent;
+  background: #ffe5b4;
 }
 
 .dropdown-slide.full-width .dropdown-menu {
