--- a/TheSpectaclesGit/src/main/webapp/css/style.css
+++ b/TheSpectaclesGit/src/main/webapp/css/style.css
@@ -92,7 +92,7 @@ blockquote {
 }
 
 input[type="email"], input[type="password"], input[type="text"], input[type="tel"] {
-  border-radius: 0;
+  border: 1px solid #000;
   box-shadow: none;
   height: 45px;
   outline: none;
